fixed text alignment

--- a/src/App.css
+++ b/src/App.css
@@ -73,10 +73,12 @@ section {
 
 .hero--header {
   margin-bottom: 16px;
+  text-align: start;
 }
 
 .hero--text {
   margin-top: 0;
+  text-align: start;
 }
 
 .review {
@@ -113,7 +115,7 @@ section {
   color: black;
   padding: 4px;
   font-size: 12px;
-  width: 68px;
+  width: 70px;
   top: 5px;
   left: 5px;
   border-radius: 4px;
